--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,39 +1,40 @@
-name: Deploy Telegram Bot
+name: Deploy Telegram Bot 
 
 on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
+  push:
+    branches:
+      - main
+  workflow_dispatch: 
 
 jobs:
-  deploy:
-    runs-on: ubuntu-latest
+  deploy:
+    runs-on: ubuntu-latest 
 
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4 
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.10'
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.10' 
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        sudo apt-get update && sudo apt-get install -y jq
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        sudo apt-get update && sudo apt-get install -y jq 
 
-    - name: Install and configure ngrok
-      run: |
-        ngrok config add-authtoken 2zZls9KgcCSFbsfkb4ngCLEnDZl_58JwwsrtN1YHF36BEaXRJ
-        chmod +x ngrok
-        ./ngrok authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
+    - name: Install and configure ngrok
+      run: |
+        wget https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-linux-amd64.tgz
+        tar -xvzf ngrok-v3-stable-linux-amd64.tgz
+        chmod +x ngrok
+        ./ngrok config add-authtoken secrets.NGROK_AUTH_TOKEN 
 
-    - name: Start Bot with Ngrok
-      env:
-        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-        PORT: 8000
-      run: |
-        bash start_bot.sh
+    - name: Start Bot with Ngrok
+      env:
+        TELEGRAM_BOT_TOKEN:{{ secrets.TELEGRAM_BOT_TOKEN }}
+        PORT: 8000
+      run: |
+        bash start_bot.sh
