--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,40 +1,44 @@
-name: Deploy Telegram Bot 
+name: Deploy Telegram Bot # ওয়ার্কফ্লোর নাম
 
 on:
-  push:
-    branches:
-      - main
-  workflow_dispatch: 
+  push: # যখন কোড পুশ করা হবে
+    branches:
+      - main # শুধুমাত্র 'main' ব্রাঞ্চে পুশ করলে
+  workflow_dispatch: # ম্যানুয়ালি ওয়ার্কফ্লো চালানোর জন্য এই অপশনটি থাকবে
 
 jobs:
-  deploy:
-    runs-on: ubuntu-latest 
+  deploy: # 'deploy' নামের একটি কাজ
+    runs-on: ubuntu-latest # উবুন্টু অপারেটিং সিস্টেমে চলবে
 
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4 
+    steps: # ধাপসমূহ
+    - name: Checkout code # গিটহাব রিপোজিটরি থেকে আপনার কোড চেকআউট করা হবে
+      uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.10' 
+    - name: Set up Python # পাইথন সেটআপ করা
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.10' # পাইথনের 3.10 সংস্করণ ব্যবহার করা হবে
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        sudo apt-get update && sudo apt-get install -y jq 
+    - name: Install dependencies # আপনার বটের জন্য প্রয়োজনীয় লাইব্রেরি এবং টুল ইনস্টল করা
+      run: | # একাধিক কমান্ড চালানোর জন্য
+        python -m pip install --upgrade pip # pip (পাইথন প্যাকেজ ইনস্টলার) আপডেট করা
+        pip install -r requirements.txt # আপনার 'requirements.txt' ফাইল থেকে সমস্ত পাইথন নির্ভরতা ইনস্টল করা
+        sudo apt-get update && sudo apt-get install -y jq # 'jq' টুল ইনস্টল করা, যা JSON ডেটা প্রসেস করতে কাজে লাগে
 
-    - name: Install and configure ngrok
-      run: |
-        wget https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-linux-amd64.tgz
-        tar -xvzf ngrok-v3-stable-linux-amd64.tgz
-        chmod +x ngrok
-        ./ngrok config add-authtoken secrets.NGROK_AUTH_TOKEN 
+    - name: Install and configure ngrok # ngrok ইনস্টল এবং কনফিগার করা
+      run: |
+        wget https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-linux-amd64.tgz # ngrok ডাউনলোড করা
+        tar -xvzf ngrok-v3-stable-linux-amd64.tgz # ডাউনলোড করা ফাইলটি এক্সট্রাক্ট করা
+        chmod +x ngrok # ngrok এক্সিকিউটেবল করা (চালানোর অনুমতি দেওয়া)
+        # আপনার ngrok অথেন্টিকেশন টোকেন যোগ করা।
+        # এটি আপনার GitHub রিপোজিটরির Secrets-এ 'NGROK_AUTH_TOKEN' নামে সেট করা থাকতে হবে।
+        ./ngrok config add-authtoken ${{ secrets.NGROK_AUTH_TOKEN }} 
 
-    - name: Start Bot with Ngrok
-      env:
-        TELEGRAM_BOT_TOKEN:{{ secrets.TELEGRAM_BOT_TOKEN }}
-        PORT: 8000
-      run: |
-        bash start_bot.sh
+    - name: Start Bot with Ngrok # Ngrok ব্যবহার করে টেলিগ্রাম বটটি শুরু করা
+      # এই ধাপে, আমরা TELEGRAM_BOT_TOKEN এবং PORT ভেরিয়েবলগুলোকে
+      # সরাসরি 'start_bot.sh' স্ক্রিপ্টের এনভায়রনমেন্টে পাস করছি।
+      # 'TELEGRAM_BOT_TOKEN' আপনার GitHub রিপোজিটরির Secrets-এ সেট করা থাকতে হবে।
+      run: |
+        TELEGRAM_BOT_TOKEN="${{ secrets.TELEGRAM_BOT_TOKEN }}" \
+        PORT="8000" \
+        bash start_bot.sh
